Fix table CSS to prevent overflow

--- a/src/Components/UserTable/UserTable.css
+++ b/src/Components/UserTable/UserTable.css
@@ -1,9 +1,11 @@
 .UserTable {
     padding: 0.5rem;
+    overflow-x: auto;
 }
 
 .UserTable table {
     width: 100%;
+    min-width: 600px;
     text-align: left;
     border-collapse: collapse;
 }
